--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DCC202 - Atividade 10: Rhara Ianna</title>
+    <title> DCC202 - Atividade 10: Rhara Ianna </title>
+    <script type="module" src="./main.js"></script>
 </head>
 <body>
     <main>
-        
+        <h1> DCC202 - Atividade 10: Rhara Ianna </h1>
+        <p>Esta é a página principal tem código JavaScript nela. Você só verá o resultado no console e durante a depuração.</p>
     </main>
 </body>
 </html>
