--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> DCC202 - Atividade 10: Rhara Ianna </title>
+    <title>DCC202 - Atividade 10:Rhara-Ianna</title>
     <script type="module" src="./main.js"></script>
 </head>
 <body>
